adding commnents and code cleaning